OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================


10/31/00 mpeterson@caldera.com
Slpd running as a DA now performs passive discovery

10/25/00 mpeterson@caldera.com
Slpd running as an SA now re-registers all services with a new DA

10/17/00 mpeterson@caldera.com
Added code to database to utilized revised libslpattr call.  Now taglists in
AttrRqsts are honored

10/17/00 mpeterson@caldera.com
Added some significant fixes to make slpd work properly on multi-homed 
machines

*** TAG OpenSLP 0.7.7 ***

10/11/00 mpeterson@caldera.com
Rewrote the README file and removed README.CVS.

10/11/00 mpeterson@caldera.com
Made changes to configure.in so that new predicate code is not build by
default.  Also added old predicate code back in (behind #ifdefs) so that at
least the original functionality will be there for 0.7.7

10/06/00 mpeterson@caldera.com
Added code to make libslp reuse TCP connections

10/06/00 mpeterson@caldera.com
Fixed timing bug in slpd where in some cases a non-blocking recvfrom() was 
called before any data could possibly be in the stream.  This would cause
libslp to return unexplained -19 on SLPReg() and friends.

10/05/00 mpeterson@caldera.com
Active DA discovery is now working correctly.  There is still need for 
code to be added so the DAAdvert statless bootstamp is honored correctly.
The SA should re-register all services with a DA if it is new or bootstamp
is stale

09/29/00 rganesan@myrealbox.com
Implemented SLPv1 support when running as a DA. This can be turned off by the
configure option --disable-slpv1. New files common/slp_v1message.h,
common/slp_v1message.c, slpd/slpd_v1process.c. SLPv1 packets can have multiple